# catshark

./: .gitignore
birthday_bot/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml
birthday_bot/crates/application/: Cargo.toml
birthday_bot/crates/application/src/: service.rs
birthday_bot/crates/domain/: Cargo.toml
birthday_bot/crates/domain/src/: elements.rs  lib.rs
birthday_bot/crates/persistence/: Cargo.toml
birthday_bot/crates/persistence/src/: inmemory.rs  lib.rs  sqlite.rs
birthday_bot/crates/telegram_bot/: Cargo.toml
birthday_bot/crates/telegram_bot/src/: main.rs
