[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
chrono = { version = "0.4.45" }
uuid = { version = "1.23.2", features = ["v7", "std"] }
thiserror = { version = "2.0.18", features = ["std"] }
async-trait = { version = "0.1.89" }
sqlx = { version = "0.9", default-features = false, features = ["sqlite", "runtime-tokio", "chrono"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = { version = "0.15" }
