[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
persistence = { path = "../persistence" }
tokio = { workspace = true }
